Bug 519149. Get properly localized font family names on Mac OS X. r=jdaggett